# ai-education-analytics

./: .env.example  .gitignore  README.md  prd.md
backend/: .dockerignore  Dockerfile  app.py  config.py  entrypoint.sh  main.py  pyproject.toml  render.yaml  test_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 4cd9ce838568_initial_tables.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/api/: dependencies.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  exceptions.py  logging.py
backend/app/ml/: __init__.py
backend/app/models/: __init__.py  academic_record.py  document.py  human_review.py  prediction.py  recommendation.py  student.py
backend/app/multimodal/: __init__.py  feature_fusion.py  image_processor.py  pdf_processor.py  tabular_processor.py  text_processor.py
backend/app/reports/: __init__.py  docx_generator.py  pdf_generator.py
backend/app/repositories/: __init__.py  document_repository.py  prediction_repository.py  review_repository.py  student_repository.py
backend/app/schemas/: __init__.py  academic_record.py  analytics.py  document.py  prediction.py  recommendation.py  report.py  review.py  student.py
backend/app/services/: __init__.py  analytics_service.py  human_review_service.py  multimodal_service.py  prediction_service.py  recommendation_service.py  report_service.py  student_service.py
backend/data/models/: ann_audio_model.h5  ann_audio_model.keras  cnn_damage_model.h5  cnn_damage_model.keras  lstm_risk_model.h5  lstm_risk_model.keras
backend/data/processed/: X_test.npy  X_test_raw.csv  X_train.npy  X_train_raw.csv  X_val.npy  y_test.npy  y_train.npy  y_val.npy
backend/data/samples/: sample_audio_features.csv  sample_sensor_data.csv
backend/data/uploads/: 1a483966_sensor.csv  d2fc5627_sensor.csv
backend/scripts/: download_dataset.py  prepare_dataset.py  seed_database.py  train_model.py
backend/src/api/: db.py  pdf_generator.py  rag.py
backend/src/models/: train_models.py  xai.py
backend/test/api/: app.py
backend/test/database/: README.md  db_connection.py
backend/test/document_load/: csv_load.py  image_load.py  pdf_load.py
backend/tests/: conftest.py  test_predictions.py  test_students.py
docs/: presentation.md
(+98 files in other folders)
