[project]
name = "edupilot-ai"
version = "0.1.0"
description = "EduPilot AI Backend: Intelligent Student Success Co-Pilot"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy[asyncio]>=2.0.31",
    "alembic>=1.13.1",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "scikit-learn>=1.5.0",
    "torch>=2.3.1",
    "shap>=0.45.1",
    "joblib>=1.4.2",
    "langchain>=0.2.5",
    "langchain-openai>=0.1.9",
    "cohere>=5.5.8",
    "pypdf>=4.2.0",
    "pillow>=10.3.0",
    "reportlab>=4.2.0",
    "python-docx>=1.1.2",
    "httpx>=0.27.0",
    "tenacity>=8.4.1",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.9",
    "mypy>=1.10.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined", "union-attr", "arg-type", "dict-item", "return-value", "call-arg"]
