[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.13",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langchain-pinecone>=0.2.13",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "tensorflow-cpu==2.15.0",

]

[dependency-groups]
dev = [
    "langchain-chroma>=1.1.0",
]
